src/App.css
body {
    font-family: "Open Sans", sans-serif;
}

/* Page */
@media (min-width: 1024px) {
    .lg\:full-page-fit {
        height: calc(100% - 80px); /* 80 for the navbar */
    }
}

/*NAVBAR*/
nav {
    height: 80px;
    background-color: #4589FF;
    padding-left: 20px;
    padding-right: 20px;
    box-shadow: -2px 0 6px 0 rgb(0, 0, 0, 0.4);


    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-bar-user {
    height: 40px;
    width: 40px;
    background-color: #fff;
    border-radius: 50%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-bar-user-inner {
    width: 36px;
    height: 36px;
    border: 2px solid #4589FF;
    color: #005DFF;
    font-size: 20px;

    border-radius: 50%;

    display: flex;
    justify-content: center;
    align-items: center;
}

/*NAVBAR DROPDOWN*/
.nav-bar-menu-dropdown {
    background-color: #FFF;
    box-shadow: 0 0 6px 0 rgb(0, 0, 0, 0.2);
    border-radius: 20px 0 20px 20px;
    padding: 10px;

    position: fixed;
    top: 60px;
    right: 20px;
    width: 160px;
    height: 180px;
}

.nav-bar-menu-dropdown .dropdown-item {
    height: 40px;
    padding: 10px;
    font-size: 19px;
    color: #4589FF;

    display: flex;
    justify-content: end;
    align-items: center;
}

/*FOOTER*/
footer {
    height: 76px;
    background-color: #FFF;
    padding-left: 16px;
    padding-right: 16px;
    box-shadow: -2px 0 6px 0 rgb(0, 0, 0, 0.4);
    color: #42526E;

    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;

    display: flex;
    align-items: center;
    justify-content: space-between;
}

footer div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.flex-2 {
    flex: 2 1 0%;
}

.flex-3 {
    flex: 3 1 0%;
}

.page-content {
    height: calc(100vh - 80px - 76px);
    padding: 0 16px;
}

@media (min-width: 1024px) {
    .page-content {
        height: calc(100vh - 80px);
        width: calc(100vw - 224px); /* Width of the sidebar */
    }

    .content-main-desktop {
        width: 456px;
    }
}


/*ADD TEST*/
.container-add-task {
    height: calc(100vh - 80px - 76px - 72px);
    overflow-y: auto;
}

@media (min-width: 1024px) {
    .container-add-task {
        height: calc(100vh - 80px);
        width: 580px;
        overflow-y: auto;
    }
}

.container-add-task .add-task-form {
    width: 100%;
    padding: 20px;
    display: flex;
    flex-direction: column;
}

.container-add-task .add-task-form .no-icon-input,
textarea {
    width: 100%;
    padding: 8px;
    border-bottom: 1px solid #e5e7eb;
}

.container-add-task .add-task-form .no-icon-input:focus,
textarea:focus {
    outline: none;
    border-color: #3b82f6;
}

.add-task-icon {
    border-radius: 50%;
    aspect-ratio: 1/1;
    padding: 4px;

    display:flex;
    align-items: center;
    justify-content: center;
}

.add-task-icon:hover, .add-task-icon:active {
    background-color: #bfdbfe;
}

.add-task-form label {
    color: #42526E;
    width: 100%;
    padding-top: 8px;
    padding-bottom: 8px;
}

.container-add-task .add-task-form .description-input {
    padding: 18px 16px;
    border-radius: 10px 0 10px 10px;
    resize: none;

    width: 100%;
    height: 88px;
}

.container-add-task .priority-selection {
    width: 100%;
    display: flex;
    gap: 16px;
}

.container-add-task .priority-button {
    width: 120px;
    height: 48px;
    border-radius: 10px;
    box-shadow: 0 0 6px 0 rgb(0, 0, 0, 0.2);

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.priority-urgent {
    background-color: #FF3D00;
    color: #FFF;
}

.priority-medium {
    background-color: #FFA800;
    color: #FFF;
}

.priority-low {
    background-color: #7AE229;
    color: #FFF;
}

.contacts-selection {
    width: 100%;
    height: 200px;
    overflow-y: auto;
}

.contacts-selection .contact {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 7px 16px;
    margin-top: 8px;
    border-radius: 10px;
}

.contacts-selection .contact.contact-selected {
    background-color: #005DFF;
    color: #FFF;
}

.selected-contacts-list {
    width: 100%;
    overflow-y: auto;
    display: flex;
    margin-top: 8px;
    gap: 8px;
}


.buttons-container {
    position: fixed;
    bottom: 76px;
    height: 72px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 32px;
}

@media (min-width: 1024px) {
    .buttons-container {
        right: 64px;
        justify-content: end;
    }
}

.button {
    box-shadow: 0 0 6px 0 rgb(0, 0, 0, 0.4);
    padding: 12px 8px;
    border-radius: 10px;
    font-size: 19px;
    display: flex;
}

.button-white {
    background-color: #FFF;
    border: 1px solid #42526E;
}

.button-blue {
    color: #FFF;
    background-color: #4589FF;
}

